Set size medium same as large to avoid overlapping problems

--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -92,8 +92,8 @@ $typography: (
 
 $breakpoints: (
   small: 32rem,
-  medium: 56rem,
-  large: 60rem,
+  medium: 68rem,
+  large: 68rem,
   xlarge: 72rem
 );
 
